Fixed crash bug and version bump